fix track spill

--- a/src/styles/CompactTrack.module.scss
+++ b/src/styles/CompactTrack.module.scss
@@ -44,7 +44,7 @@
     height: 60px;
     background: var(--nextui-colors-waitingBackground);
     flex-shrink: 0;
-    margin-right: var(--nextui-space-8);
+    margin-right: var(--nextui-space-4);
     position: relative;
     overflow: hidden;
     border-radius: var(--nextui-radii-base);
@@ -73,7 +73,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: 0.5rem;
 }
 
 .trackName {
@@ -90,7 +89,6 @@
 }
 
 .artists {
-    display: block;
     color: var(--nextui-colors-text);
     font-size: var(--nextui-fontSizes-sm);
     word-wrap: nowrap;
